--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
 						</div>
 					</section>
+				<iframe src="http://localhost:8888/lab/tree/Desktop/Web%20mapping/11_linked_maps.ipynb" name="myIFrame" scrolling="auto" width="300px" height="600px" style="border: 5px solid #000000;"></iframe>
 
 				<!-- About Me -->
 				<section id="about" class="three" style="color: black;">
